--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "mongodb": "^2.2.6"
+    "mongodb": "^2.2.6",
+    "mongoose": ">=0.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.10.0"
